--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
+    "@types/gm": "^1.18.4",
     "@types/jest": "^24.0.18",
+    "@types/ws": "^6.0.3",
     "jest": "^24.9.0",
     "prettier": "1.18.2",
     "ts-jest": "^24.0.2",
