--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
+    "term-img": "^4.1.0",
     "ws": "^7.1.2"
   }
 }
