--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/binary-parser": "^1.3.1",
     "@types/gm": "^1.18.4",
     "@types/jest": "^24.0.18",
+    "@types/usb": "^1.5.1",
     "@types/ws": "^6.0.3",
     "jest": "^24.9.0",
     "prettier": "1.18.2",
@@ -26,6 +27,8 @@
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
+    "node-thermal-printer": "https://github.com/Klemen1337/node-thermal-printer#21304e24c0cd97123b5a6c5aa82bc2426c3d8e37",
+    "printer": "^0.2.2",
     "term-img": "^4.1.0",
     "ws": "^7.1.2"
   }
