--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/binary-parser": "^1.3.1",
     "@types/gm": "^1.18.4",
     "@types/jest": "^24.0.18",
+    "@types/ndarray": "^1.0.7",
     "@types/usb": "^1.5.1",
     "@types/ws": "^6.0.3",
     "jest": "^24.9.0",
