--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
     "@types/gm": "^1.18.4",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^25.1.4",
     "@types/ndarray": "^1.0.7",
     "@types/node": "^13.0.0",
     "@types/usb": "^1.5.1",
-    "@types/ws": "^6.0.3",
-    "jest": "^24.9.0",
+    "@types/ws": "^7.2.2",
+    "jest": "^25.1.0",
     "prettier": "^1.18.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^25.2.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@microsoft/ts-command-line": "^4.2.8",
+    "@rushstack/ts-command-line": "^4.3.11",
     "binary-parser": "^1.4.0",
-    "escpos": "^2.5.2",
+    "escpos": "^3.0.0-alpha.3",
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
