--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "ts-exec": "ts-node --compiler typescript",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
@@ -15,6 +16,11 @@
     "@types/node": "^13.0.0",
     "@types/usb": "^1.5.1",
     "@types/ws": "^7.2.2",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "prettier": "^1.18.2",
     "ts-jest": "^25.2.1",
