The status names are a bit made up, hopefully this tidies them a little since we're not using the matrix feature

--- a/.github/workflows/yarn-lint.yml
+++ b/.github/workflows/yarn-lint.yml
@@ -6,9 +6,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [12.x]
 
     steps:
       - name: Checkout
@@ -16,10 +16,10 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.x
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
