--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "ts-exec": "ts-node --compiler typescript",
+    "build": "ttsc -p .",
+    "ts-exec": "ts-node --compiler ttypescript",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
-    "@types/gm": "^1.18.4",
+    "@types/gm": "^1.18.8",
     "@types/jest": "^25.1.4",
     "@types/ndarray": "^1.0.7",
-    "@types/node": "^13.0.0",
+    "@types/node": "^14.0.1",
     "@types/usb": "^1.5.1",
     "@types/ws": "^7.2.2",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
-    "prettier": "^1.18.2",
+    "jest": "^26.0.1",
+    "jest-websocket-mock": "^2.0.2",
+    "mock-socket": "^9.0.3",
+    "prettier": "^2.0.2",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.3.0",
+    "ttypescript": "^1.5.10",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@rushstack/ts-command-line": "^4.3.11",
+    "@rushstack/ts-command-line": "^4.3.14",
     "binary-parser": "^1.4.0",
     "escpos": "^3.0.0-alpha.3",
     "fast-bmp": "^1.0.0",
@@ -36,6 +40,7 @@
     "gm": "^1.23.1",
     "mutable-buffer": "^2.1.1",
     "term-img": "^4.1.0",
+    "typescript-is": "^0.16.0",
     "ws": "^7.1.2"
   }
 }
