--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "binary-parser": "^1.4.0",
     "bluetooth-serial-port": "^2.2.7",
     "escpos": "^3.0.0-alpha.3",
+    "escpos-bluetooth": "^3.0.0-alpha.2",
     "escpos-usb": "^3.0.0-alpha.2",
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
     "mutable-buffer": "^2.1.1",
+    "node-bluetooth": "https://github.com/cphillips/node-bluetooth.git",
     "term-img": "^4.1.0",
     "typescript-is": "^0.16.0",
     "ws": "^7.1.2"
