--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/binary-parser": "^1.3.1",
     "@types/gm": "^1.18.8",
     "@types/jest": "^25.1.4",
-    "@types/ndarray": "^1.0.7",
+    "@types/ndarray": "^1.0.8",
     "@types/node": "^14.0.1",
     "@types/usb": "^1.5.1",
     "@types/ws": "^7.2.2",
@@ -26,13 +26,13 @@
     "jest-websocket-mock": "^2.0.2",
     "mock-socket": "^9.0.3",
     "prettier": "^2.0.2",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^26.0.0",
     "ts-node": "^8.3.0",
     "ttypescript": "^1.5.10",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@rushstack/ts-command-line": "^4.3.14",
+    "@rushstack/ts-command-line": "^4.4.0",
     "binary-parser": "^1.4.0",
     "bluetooth-serial-port": "^2.2.7",
     "escpos": "^3.0.0-alpha.3",
@@ -42,9 +42,11 @@
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
     "mutable-buffer": "^2.1.1",
-    "node-bluetooth": "https://github.com/cphillips/node-bluetooth.git",
     "term-img": "^4.1.0",
     "typescript-is": "^0.16.0",
     "ws": "^7.1.2"
+  },
+  "resolutions": {
+    "escpos-bluetooth/node-bluetooth": "https://github.com/cphillips/node-bluetooth.git#18803197caf371334564e4f268344ef988eb1599"
   }
 }
