--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@rushstack/ts-command-line": "^4.4.0",
+    "@types/js-yaml": "^3.12.4",
     "binary-parser": "^1.4.0",
     "bluetooth-serial-port": "^2.2.7",
     "escpos": "^3.0.0-alpha.3",
@@ -41,6 +42,7 @@
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
+    "js-yaml": "^3.13.1",
     "mutable-buffer": "^2.1.1",
     "term-img": "^4.1.0",
     "typescript-is": "^0.16.0",
