--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "plugins": [
       { "transform": "typescript-is/lib/transform-inline/transformer" }
-    ]
+    ],
+    "resolveJsonModule": true
   }
 }
