--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
+    "@types/bindings": "^1.3.0",
     "@types/gm": "^1.18.8",
     "@types/jest": "^25.1.4",
     "@types/ndarray": "^1.0.8",
@@ -35,9 +36,9 @@
     "@rushstack/ts-command-line": "^4.4.0",
     "@types/js-yaml": "^3.12.4",
     "binary-parser": "^1.4.0",
+    "bindings": "^1.5.0",
     "bluetooth-serial-port": "^2.2.7",
     "escpos": "^3.0.0-alpha.3",
-    "escpos-bluetooth": "^3.0.0-alpha.2",
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
     "gm": "^1.23.1",
@@ -47,8 +48,5 @@
     "typescript-is": "^0.16.0",
     "usb": "^1.6.3",
     "ws": "^7.1.2"
-  },
-  "resolutions": {
-    "escpos-bluetooth/node-bluetooth": "https://github.com/cphillips/node-bluetooth.git#18803197caf371334564e4f268344ef988eb1599"
   }
 }
