--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ttsc -p .",
     "ts-exec": "ts-node --compiler ttypescript",
     "test": "jest",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "install": "yarn copyfiles -f ./node_modules/bluetooth-serial-port/build/Release/BluetoothSerialPort.node ./build"
   },
   "devDependencies": {
     "@types/binary-parser": "^1.3.1",
@@ -38,6 +39,7 @@
     "binary-parser": "^1.4.0",
     "bindings": "^1.5.0",
     "bluetooth-serial-port": "^2.2.7",
+    "copyfiles": "^2.2.0",
     "escpos": "^3.0.0-alpha.3",
     "fast-bmp": "^1.0.0",
     "get-pixels": "^3.3.2",
