Bluetooth comms feel a lil more stable now, only sending a row at a time

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^25.1.4",
     "@types/ndarray": "^1.0.8",
     "@types/node": "^14.0.1",
+    "@types/python-struct": "^1.0.0",
     "@types/usb": "^1.5.1",
     "@types/ws": "^7.2.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -46,6 +47,7 @@
     "gm": "^1.23.1",
     "js-yaml": "^3.13.1",
     "mutable-buffer": "^2.1.1",
+    "python-struct": "^1.1.2",
     "term-img": "^4.1.0",
     "typescript-is": "^0.16.0",
     "usb": "^1.6.3",
