Moved logging all over to winston

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "term-img": "^4.1.0",
     "typescript-is": "^0.16.0",
     "usb": "^1.6.3",
+    "winston": "^3.2.1",
     "ws": "^7.1.2"
   }
 }
