--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/python-struct": "^1.0.0",
     "@types/usb": "^1.5.1",
     "@types/ws": "^7.2.2",
+    "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
@@ -35,7 +36,6 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@rushstack/ts-command-line": "^4.4.0",
     "@types/js-yaml": "^3.12.4",
     "binary-parser": "^1.4.0",
     "bindings": "^1.5.0",
@@ -51,6 +51,7 @@
     "typescript-is": "^0.16.0",
     "usb": "^1.6.3",
     "winston": "^3.2.1",
-    "ws": "^7.1.2"
+    "ws": "^7.1.2",
+    "yargs": "^15.3.1"
   }
 }
