--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "js-yaml": "^3.13.1",
     "mutable-buffer": "^2.1.1",
     "python-struct": "^1.1.2",
-    "term-img": "^4.1.0",
+    "terminal-image": "^1.0.1",
     "typescript-is": "^0.16.0",
     "usb": "^1.6.3",
     "winston": "^3.2.1",
